--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 #spring.data.mongodb.database=test
-spring.data.mongodb.uri=mongodb+srv://heroe:heroe1234@tests-gtns7.mongodb.net/test?retryWrites=true&w=majority
-
+spring.data.mongodb.uri= mongodb+srv://heroe:4qpzyzGlEFZuEjlj@cluster0.hukup.mongodb.net/test
